# aoc22

./: .gitignore  CMakeLists.txt  CMakeSettings.json
day1/: day1.cpp  day1.h  main.cpp
day2/: day2.cpp  day2.h  rock-paper-scissor.cpp  rock-paper-scissor.h
day3/: part1.cpp
